--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,13 @@
     <project.build.number></project.build.number>
   </properties>
 
+  <pluginRepositories>
+    <pluginRepository>
+      <id>maven2</id>
+      <url>https://repo.maven.apache.org/maven2/</url>
+    </pluginRepository>
+  </pluginRepositories>
+
   <repositories>
     <repository>
       <id>dmulloy2-repo</id>
@@ -80,7 +87,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
-        <version>2.3</version>
+        <version>2.4</version>
         <executions>
           <execution>
             <phase>package</phase>
@@ -176,6 +183,11 @@
       <groupId>com.comphenix.protocol</groupId>
       <artifactId>ProtocolLib</artifactId>
       <version>3.6.4</version>
+    </dependency>
+    <dependency>
+      <groupId>net.t7seven7t.viewit</groupId>
+      <artifactId>ViewIt</artifactId>
+      <version>3</version>
     </dependency>
   </dependencies>
 </project>
