--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ name: UltimateArena
 main: net.dmulloy2.ultimatearena.UltimateArena
 version: ${project.version}${project.build.number}
 author: dmulloy2
-softdepend: [WorldEdit, Vault, Essentials, Multiverse-Core, MyWorlds, ProtocolLib]
+softdepend: [WorldEdit, Vault, Essentials, Multiverse-Core, MyWorlds, ProtocolLib, ViewIt]
 description: The Ultimate in Minecraft death sports and spleef!
 load: postworld
 commands:
